[tool.poetry]
name = "livros_springer"
version = "0.1.0"
description = "\"baixa livros pdf\""
authors = ["Marcos Oliveira <marcosf63@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requestes = "^0.0.1"
bs4 = "^0.0.1"
pytest = "^5.4.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
